Layout issue Fixed

--- a/Unit-Converter/style.css
+++ b/Unit-Converter/style.css
@@ -27,7 +27,7 @@ body {
 .hero-heading h2 {
     color: whitesmoke;
     font-weight: 700;
-    border-bottom: 2px solid #ffcb69;
+    text-decoration: underline #ffcb69;
     text-align: center;
     
 }
@@ -73,10 +73,9 @@ body {
 }
 
 .result {
-    display: flex;
-    justify-content: center;
+    display: grid;
+    gap: 1rem;
     align-items: center;
-    flex-direction: column;
     margin-top: 5px;
     background-color: rgba(200, 150, 100, 0.05);
     backdrop-filter: blur(1px);
@@ -84,10 +83,7 @@ body {
     border-radius: 1px;
     color: whitesmoke;
     height: 70%;
-    min-width: 100%;
-    min-height: 70%;
-    max-width: 100%;
-    max-height: 70%;
+    /* width: max-content; */
 }
 
 .result h3 {
@@ -113,11 +109,6 @@ body {
     border: 1px solid;
     margin-left: 10px;
     margin-right: 10px;
-    min-height: 25%;
-    min-width: 70%;
-    max-height: 25%;
-    max-width: 70%;
-
 }
 
 .res-volume {
@@ -127,11 +118,6 @@ body {
     border: 1px solid;
     margin-left: 10px;
     margin-right: 10px;
-    min-height: 25%;
-    min-width: 70%;
-    max-height: 25%;
-    max-width: 70%;
-
 }
 
 .res-mass {
@@ -140,10 +126,6 @@ body {
     border: 1px solid;
     margin-left: 10px;
     margin-right: 10px;
-    min-height: 25%;
-    min-width: 70%;
-    max-height: 25%;
-    max-width: 84%;
     
 }
 
